# oxidize

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  mdbook.yml
book/: book.toml
book/src/: 02-getting-started.md  03-dashboard.md  04-main-page.md  05-summary-page.md  07-troubleshooting.md  SUMMARY.md
docs/: book.toml  dashboard-bugs.md  summary-page-fixes.md
docs/src/: 01-introduction.md  06-api-reference.md  08-faq.md
docs/superpowers/plans/: 2026-04-19-main-page-ui-redesign.md  2026-04-19-widget-layout.md  2026-04-25-account-groups.md
src/: cache.rs  config.rs  lib.rs  main.rs
src/client/: mod.rs
src/handlers/: account.rs  budget_comparison.rs  category.rs  dashboard.rs  dashboard_api.rs  index.rs  mod.rs  summary.rs  widget.rs
src/models/: account.rs  budget.rs  category.rs  chart.rs  dashboard.rs  mod.rs  summary.rs  widget.rs
src/storage/: mod.rs
static/: app.js  app.test.js  budget-comparison.html  dashboard.html  dashboard.js  dashboard.test.js  date-utils.js  index.html  manifest.json  style.css  summary.html  sw.js  theme.js
tests/: budget_comparison_test.rs  chart_integration_test.rs  earned_spent_time_range_test.rs  oxi_14_15_route_registration_test.rs  oxi_15_earned_spent_bug_test.rs  oxi_20_summary_test.rs  oxi_37_earned_spent_date_parsing.rs  oxi_38_chunk_date_range_test.rs  oxi_budget_spent_chart.rs  repro_oxi_32.rs  robustness_tests.rs  widget_layout_test.rs
(+4 files in other folders)
