[package]
name = "oxidize"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
serde_urlencoded = "0.7.1"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
dirs = "5.0"
once_cell = "1.19"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
